feat: Enhance ESP and Aimbot Features with UI Improvements
- Updated esp_feature.h to include additional parameters for entity rendering.
- Enhanced hack_logic.cpp with new functions for reading entity health, armor, and names.
- Implemented a new GUI menu in gui_menu.cpp to manage features like Aimbot and ESP with improved layout and styling.
- Added gui_theme.cpp and gui_theme.h for custom UI theming and font loading.
- Refactored GUI rendering logic to support dynamic sizing and improved user experience.
- Introduced diagnostics and actions panels in the GUI for better debugging and control.

--- a/config.json
+++ b/config.json
@@ -6,9 +6,21 @@
     "bSnaplines": false,
     "espShowTeammates": false,
     "espShowEnemies": true,
+    "espShowName": true,
+    "espShowHealth": true,
+    "espShowArmor": false,
+    "espUseTeamColors": true,
+    "espInfoPosition": 0,
+    "espShowDistance": true,
+    "espShowHealthValue": true,
+    "espShowArmorValue": true,
+    "espBoxFilled": false,
+    "espBoxThickness": 1.5,
+    "espBoxFillAlpha": 0.15,
     "aimbotTargetTeammates": false,
     "aimbotTargetEnemies": true,
     "aimbotPriorityMode": 0,
+    "aimbotTargetBone": 0,
     "aimbotFOV": 10.0,
     "aimbotSmooth": 1.0
   },
@@ -24,6 +36,21 @@
     "Fov": "0x0018A7CC",
     "ViewMatrix": "0x0017DFD0",
     "PlayerCount": "0x0018AC0C",
-    "Team": "0x30C"
+    "Team": "0x30C",
+    "CameraX": "0x34",
+    "CameraY": "0x38",
+    "Health": "0xEC",
+    "Armor": "0xF0",
+    "Name": "0x205",
+    "AmmoPistol": "0x12C",
+    "AmmoShotgun": "0x134",
+    "AmmoSubmachine": "0x138",
+    "AmmoSniper": "0x13C",
+    "AmmoAssaultRifle": "0x140",
+    "AmmoGrenade": "0x144",
+    "FastFireShotgun": "0x158",
+    "FastFireSniper": "0x160",
+    "FastFireAssaultRifle": "0x164",
+    "AutoShoot": "0x204"
   }
 }
